@@ -19,9 +19,12 @@ mkdir mods
 echo " > multi-compiling modules"
 # spark is required as an automatic module, so copy it to mods
 cp libs/spark-core-* mods/spark.core.jar
+# since the monitor services are not required (directly or indirectly)
+# from the root module monitor, they are added manually
 $JAVAC \
 	--module-path mods \
 	--module-source-path "./*/src/main/java" \
+	--add-modules=monitor.observer.alpha,monitor.observer.beta \
 	-d classes \
 	--module monitor
 
